@@ -1140,8 +1140,8 @@ cat >expected <<'EOF'
 "!(X(F((!(p0)) | (G(F(p1))))))","15",3
 "!(X(F((!(p0)) | (G(F(p1))))))","16",3
 "!(X(F((!(p0)) | (G(F(p1))))))","17",3
-"(G((F(!(p0))) U (!(p0)))) U (X(p0))","1",6
-"(G((F(!(p0))) U (!(p0)))) U (X(p0))","2",6
+"(G((F(!(p0))) U (!(p0)))) U (X(p0))","1",5
+"(G((F(!(p0))) U (!(p0)))) U (X(p0))","2",5
 "(G((F(!(p0))) U (!(p0)))) U (X(p0))","3",5
 "(G((F(!(p0))) U (!(p0)))) U (X(p0))","4",5
 "(G((F(!(p0))) U (!(p0)))) U (X(p0))","6",5
@@ -1156,22 +1156,22 @@ cat >expected <<'EOF'
 "(G((F(!(p0))) U (!(p0)))) U (X(p0))","15",5
 "(G((F(!(p0))) U (!(p0)))) U (X(p0))","16",5
 "(G((F(!(p0))) U (!(p0)))) U (X(p0))","17",5
-"!((G((F(!(p0))) U (!(p0)))) U (X(p0)))","1",5
-"!((G((F(!(p0))) U (!(p0)))) U (X(p0)))","2",5
-"!((G((F(!(p0))) U (!(p0)))) U (X(p0)))","3",5
-"!((G((F(!(p0))) U (!(p0)))) U (X(p0)))","4",5
-"!((G((F(!(p0))) U (!(p0)))) U (X(p0)))","6",5
-"!((G((F(!(p0))) U (!(p0)))) U (X(p0)))","7",5
-"!((G((F(!(p0))) U (!(p0)))) U (X(p0)))","8",5
-"!((G((F(!(p0))) U (!(p0)))) U (X(p0)))","9",5
-"!((G((F(!(p0))) U (!(p0)))) U (X(p0)))","10",5
-"!((G((F(!(p0))) U (!(p0)))) U (X(p0)))","11",5
-"!((G((F(!(p0))) U (!(p0)))) U (X(p0)))","12",5
-"!((G((F(!(p0))) U (!(p0)))) U (X(p0)))","13",5
-"!((G((F(!(p0))) U (!(p0)))) U (X(p0)))","14",5
-"!((G((F(!(p0))) U (!(p0)))) U (X(p0)))","15",5
-"!((G((F(!(p0))) U (!(p0)))) U (X(p0)))","16",5
-"!((G((F(!(p0))) U (!(p0)))) U (X(p0)))","17",5
+"!((G((F(!(p0))) U (!(p0)))) U (X(p0)))","1",4
+"!((G((F(!(p0))) U (!(p0)))) U (X(p0)))","2",4
+"!((G((F(!(p0))) U (!(p0)))) U (X(p0)))","3",4
+"!((G((F(!(p0))) U (!(p0)))) U (X(p0)))","4",4
+"!((G((F(!(p0))) U (!(p0)))) U (X(p0)))","6",4
+"!((G((F(!(p0))) U (!(p0)))) U (X(p0)))","7",4
+"!((G((F(!(p0))) U (!(p0)))) U (X(p0)))","8",4
+"!((G((F(!(p0))) U (!(p0)))) U (X(p0)))","9",4
+"!((G((F(!(p0))) U (!(p0)))) U (X(p0)))","10",4
+"!((G((F(!(p0))) U (!(p0)))) U (X(p0)))","11",4
+"!((G((F(!(p0))) U (!(p0)))) U (X(p0)))","12",4
+"!((G((F(!(p0))) U (!(p0)))) U (X(p0)))","13",4
+"!((G((F(!(p0))) U (!(p0)))) U (X(p0)))","14",4
+"!((G((F(!(p0))) U (!(p0)))) U (X(p0)))","15",4
+"!((G((F(!(p0))) U (!(p0)))) U (X(p0)))","16",4
+"!((G((F(!(p0))) U (!(p0)))) U (X(p0)))","17",4
 "((p0) | (G((p0) M (!(p1))))) W (F(p2))","1",4
 "((p0) | (G((p0) M (!(p1))))) W (F(p2))","2",5
 "((p0) | (G((p0) M (!(p1))))) W (F(p2))","3",4
